@@ -1,6 +1,10 @@
 package org.beanmaker.v2.runtime;
 
+import org.beanmaker.v2.util.Strings;
+
 public class Codes {
+
+    public static final String STANDARD_CODE_CHARACTERS = "abcdefghijklmnopqrstuvwxyz0123456789_-";
 
     public static void adjustCopyCode(DbBeanWithCode copy) {
         copy.setCode(copy.getCode() + "_copy");
@@ -13,4 +17,9 @@ public class Codes {
             } while (!copy.isCodeUnique());
         }
     }
+
+    public static String createStandardizedCode(String source) {
+        return Strings.replaceUnknownChars(Strings.removeAccents(source).toLowerCase(), STANDARD_CODE_CHARACTERS);
+    }
+
 }
